making code pretty'

--- a/analysis/run_analysis.ipynb
+++ b/analysis/run_analysis.ipynb
@@ -387,6 +387,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Broadcast': 8.140203,\n",
+       " 'Comm.': 57.7529175,\n",
+       " 'Force': 65.378968,\n",
+       " 'Gather': 49.5931585,\n",
+       " 'Integ.': 0.002017,\n",
+       " 'Overall': 136.7490395,\n",
+       " 'Scatter': 0.0038965,\n",
+       " 'Tree': 13.5834725}"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_results['gpu_16-8_10000_10_100'].med_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Broadcast': 82.624632,\n",
+       " 'Comm.': 611.560284,\n",
+       " 'Force': 622.160006,\n",
+       " 'Gather': 529.816358,\n",
+       " 'Integ.': 0.002231,\n",
+       " 'Overall': 1812.131212,\n",
+       " 'Scatter': 0.135571,\n",
+       " 'Tree': 577.155531}"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_results['gpu_24-12_100000_3_100'].med_times"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 251,
    "metadata": {
     "scrolled": false
