remade gpuc tests

--- a/slurm_scripts/gpuc_scalings/make_slurm_files.ipynb
+++ b/slurm_scripts/gpuc_scalings/make_slurm_files.ipynb
@@ -48,7 +48,7 @@
     "    est_hours *= steps / 100.\n",
     "    est_hours *= (parts / 1000.) * np.log(parts / 1000.)\n",
     "    est_hours /= (cores)**0.5\n",
-    "    hours = int(est_hours % 24)+1\n",
+    "    hours = int(est_hours % 24)+2\n",
     "    days = int(est_hours // 24)\n",
     "    if hours >= 24:\n",
     "        hours -= 24\n",
@@ -92,44 +92,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpu_1_1000_100_100\n",
-      "gpu_1_4000_30_100\n",
-      "gpu_1_16000_10_100\n",
-      "gpu_2_1000_100_100\n",
-      "gpu_4_1000_100_100\n",
-      "gpu_8_1000_100_100\n",
-      "gpu_2-2_1000_100_100\n",
-      "gpu_4-2_1000_100_100\n",
-      "gpu_4-4_1000_100_100\n",
-      "gpu_8-4_1000_100_100\n",
-      "gpu_8-8_1000_100_100\n",
-      "gpu_16-8_1000_100_100\n",
-      "gpu_12-12_1000_100_100\n",
-      "gpu_24-12_1000_100_100\n",
-      "gpu_4-2_10000_10_100\n",
-      "gpu_8-4_10000_10_100\n",
-      "gpu_16-8_10000_10_100\n",
-      "gpu_24-12_10000_10_100\n",
-      "gpu_8-4_100000_3_100\n",
-      "gpu_16-8_100000_3_100\n",
-      "gpu_24-12_100000_3_100\n"
+      "gpuc_1_1000_10_100\n",
+      "gpuc_1_4000_3_100\n",
+      "gpuc_1_16000_3_100\n",
+      "gpuc_2_1000_10_100\n",
+      "gpuc_2-2_1000_10_100\n",
+      "gpuc_4-2_1000_10_100\n",
+      "gpuc_4-4_1000_10_100\n",
+      "gpuc_8-1_1000_10_100\n",
+      "gpuc_8-2_1000_10_100\n",
+      "gpuc_8-4_1000_10_100\n",
+      "gpuc_8-8_1000_10_100\n",
+      "gpuc_16-8_1000_10_100\n",
+      "gpuc_32-8_1000_10_100\n",
+      "gpuc_64-8_1000_10_100\n",
+      "gpuc_128-8_1000_10_100\n",
+      "gpuc_256-8_1000_10_100\n",
+      "gpuc_576-12_1000_10_100\n",
+      "gpuc_576-12_10000_3_100\n",
+      "gpuc_576-12_100000_3_100\n",
+      "gpuc_4-2_4000_10_100\n",
+      "gpuc_4-2_16000_3_100\n",
+      "gpuc_8-4_4000_10_100\n",
+      "gpuc_8-4_16000_3_100\n",
+      "gpuc_8-4_100000_3_100\n",
+      "gpuc_16-8_4000_10_100\n",
+      "gpuc_16-8_16000_3_100\n",
+      "gpuc_16-8_100000_3_100\n"
      ]
     }
    ],
    "source": [
     "for name in ['gpuc_1_1000_10_100','gpuc_1_4000_3_100','gpuc_1_16000_3_100', 'gpuc_2_1000_10_100',\n",
-    "             'gpuc_2-2_1000_10_100','gpuc_4_1000_10_100','gpuc_4-2_1000_10_100','gpuc_4-4_1000_10_100',\n",
+    "             'gpuc_2-2_1000_10_100','gpuc_4-2_1000_10_100','gpuc_4-4_1000_10_100',\n",
     "             'gpuc_8-1_1000_10_100','gpuc_8-2_1000_10_100','gpuc_8-4_1000_10_100','gpuc_8-8_1000_10_100',\n",
     "             'gpuc_16-8_1000_10_100','gpuc_32-8_1000_10_100','gpuc_64-8_1000_10_100',\n",
     "             'gpuc_128-8_1000_10_100','gpuc_256-8_1000_10_100','gpuc_576-12_1000_10_100',\n",
-    "             'gpuc_576-12_10000_3_100','gpuc_576-12_100000_3_100','gpuc_576-12_1000000_3_100',\n",
+    "             'gpuc_576-12_10000_3_100','gpuc_576-12_100000_3_100',\n",
     "             'gpuc_4-2_4000_10_100','gpuc_4-2_16000_3_100','gpuc_8-4_4000_10_100','gpuc_8-4_16000_3_100',\n",
     "             'gpuc_8-4_100000_3_100','gpuc_16-8_4000_10_100','gpuc_16-8_16000_3_100',\n",
     "             'gpuc_16-8_100000_3_100']:\n",
