--- a/slurm_scripts/gpuc_scalings/make_slurm_files.ipynb
+++ b/slurm_scripts/gpuc_scalings/make_slurm_files.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -92,53 +92,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for name in ['gpuc_1_1000_10_100','gpuc_1_4000_3_100','gpuc_1_16000_3_100', 'gpuc_2_1000_10_100',\n",
+    "#              'gpuc_2-2_1000_10_100','gpuc_4-2_1000_10_100','gpuc_4-4_1000_10_100',\n",
+    "#              'gpuc_8-1_1000_10_100','gpuc_8-2_1000_10_100','gpuc_8-4_1000_10_100','gpuc_8-8_1000_10_100',\n",
+    "#              'gpuc_16-8_1000_10_100','gpuc_32-8_1000_10_100','gpuc_64-8_1000_10_100',\n",
+    "#              'gpuc_128-8_1000_10_100','gpuc_256-8_1000_10_100','gpuc_576-12_1000_10_100',\n",
+    "#              'gpuc_576-12_10000_3_100','gpuc_576-12_100000_3_100',\n",
+    "#              'gpuc_4-2_4000_10_100','gpuc_4-2_16000_3_100','gpuc_8-4_4000_10_100','gpuc_8-4_16000_3_100',\n",
+    "#              'gpuc_8-4_100000_3_100','gpuc_16-8_4000_10_100','gpuc_16-8_16000_3_100',\n",
+    "#              'gpuc_16-8_100000_3_100']:\n",
+    "#     print(name)\n",
+    "#     with open(name + '.slurm', 'w') as f:\n",
+    "#         f.write(make_slurm_file(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpuc_1_1000_10_100\n",
-      "gpuc_1_4000_3_100\n",
-      "gpuc_1_16000_3_100\n",
-      "gpuc_2_1000_10_100\n",
-      "gpuc_2-2_1000_10_100\n",
-      "gpuc_4-2_1000_10_100\n",
-      "gpuc_4-4_1000_10_100\n",
-      "gpuc_8-1_1000_10_100\n",
-      "gpuc_8-2_1000_10_100\n",
-      "gpuc_8-4_1000_10_100\n",
-      "gpuc_8-8_1000_10_100\n",
-      "gpuc_16-8_1000_10_100\n",
-      "gpuc_32-8_1000_10_100\n",
-      "gpuc_64-8_1000_10_100\n",
-      "gpuc_128-8_1000_10_100\n",
-      "gpuc_256-8_1000_10_100\n",
       "gpuc_576-12_1000_10_100\n",
       "gpuc_576-12_10000_3_100\n",
-      "gpuc_576-12_100000_3_100\n",
-      "gpuc_4-2_4000_10_100\n",
-      "gpuc_4-2_16000_3_100\n",
-      "gpuc_8-4_4000_10_100\n",
-      "gpuc_8-4_16000_3_100\n",
-      "gpuc_8-4_100000_3_100\n",
-      "gpuc_16-8_4000_10_100\n",
-      "gpuc_16-8_16000_3_100\n",
-      "gpuc_16-8_100000_3_100\n"
+      "gpuc_576-12_4000_3_100\n",
+      "gpuc_576-12_16000_3_100\n",
+      "gpuc_576-12_32000_3_100\n",
+      "gpuc_576-12_64000_3_100\n"
      ]
     }
    ],
    "source": [
-    "for name in ['gpuc_1_1000_10_100','gpuc_1_4000_3_100','gpuc_1_16000_3_100', 'gpuc_2_1000_10_100',\n",
-    "             'gpuc_2-2_1000_10_100','gpuc_4-2_1000_10_100','gpuc_4-4_1000_10_100',\n",
-    "             'gpuc_8-1_1000_10_100','gpuc_8-2_1000_10_100','gpuc_8-4_1000_10_100','gpuc_8-8_1000_10_100',\n",
-    "             'gpuc_16-8_1000_10_100','gpuc_32-8_1000_10_100','gpuc_64-8_1000_10_100',\n",
-    "             'gpuc_128-8_1000_10_100','gpuc_256-8_1000_10_100','gpuc_576-12_1000_10_100',\n",
-    "             'gpuc_576-12_10000_3_100','gpuc_576-12_100000_3_100',\n",
-    "             'gpuc_4-2_4000_10_100','gpuc_4-2_16000_3_100','gpuc_8-4_4000_10_100','gpuc_8-4_16000_3_100',\n",
-    "             'gpuc_8-4_100000_3_100','gpuc_16-8_4000_10_100','gpuc_16-8_16000_3_100',\n",
-    "             'gpuc_16-8_100000_3_100']:\n",
+    "for name in ['gpuc_576-12_1000_10_100','gpuc_576-12_10000_3_100','gpuc_576-12_4000_3_100',\n",
+    "             'gpuc_576-12_16000_3_100','gpuc_576-12_32000_3_100','gpuc_576-12_64000_3_100']:\n",
     "    print(name)\n",
     "    with open(name + '.slurm', 'w') as f:\n",
     "        f.write(make_slurm_file(name))"
