updated setup.py and readme

--- a/slurm_scripts/gpuc_scalings/make_slurm_files.ipynb
+++ b/slurm_scripts/gpuc_scalings/make_slurm_files.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,15 +124,24 @@
       "gpuc_576-12_4000_3_100\n",
       "gpuc_576-12_16000_3_100\n",
       "gpuc_576-12_32000_3_100\n",
-      "gpuc_576-12_64000_3_100\n"
+      "gpuc_576-12_64000_3_100\n",
+      "gpuc_4_1000_10_100\n",
+      "gpuc_8-1_1000_10_100\n",
+      "gpuc_8-2_1000_10_100\n",
+      "gpuc_32-8_1000_10_100\n",
+      "gpuc_64-8_1000_10_100\n",
+      "gpuc_128-8_1000_10_100\n",
+      "gpuc_256-8_1000_10_100\n"
      ]
     }
    ],
    "source": [
     "for name in ['gpuc_576-12_1000_10_100','gpuc_576-12_10000_3_100','gpuc_576-12_4000_3_100',\n",
-    "             'gpuc_576-12_16000_3_100','gpuc_576-12_32000_3_100','gpuc_576-12_64000_3_100']:\n",
+    "             'gpuc_576-12_16000_3_100','gpuc_576-12_32000_3_100','gpuc_576-12_64000_3_100',\n",
+    "             'gpuc_4_1000_10_100','gpuc_8-1_1000_10_100','gpuc_8-2_1000_10_100',\n",
+    "             'gpuc_32-8_1000_10_100','gpuc_64-8_1000_10_100','gpuc_128-8_1000_10_100','gpuc_256-8_1000_10_100']:\n",
     "    print(name)\n",
-    "    with open(name + '.slurm', 'w') as f:\n",
+    "    with open('../gpuc_scalings_v2/'+name + '.slurm', 'w') as f:\n",
     "        f.write(make_slurm_file(name))"
    ]
   },
