addd examples directory

--- a/analysis/final_plots_ben.ipynb
+++ b/analysis/final_plots_ben.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
     "ax.set_xlabel('')\n",
     "ax.set_yscale('log')\n",
     "# ax.set_ylim([0.1, 10])\n",
-    "plt.savefig('scaling_times_large.jpg')"
+    "# plt.savefig('scaling_times_large.jpg')"
    ]
   },
   {
@@ -794,6 +794,60 @@
     "# for a in axes.flatten():\n",
     "#     a.set_xscale('log')\n",
     "# plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Broadcast': 14.065438,\n",
+       " 'Comm.': 14.081706,\n",
+       " 'Force': 105.276457,\n",
+       " 'Gather': 0.00055,\n",
+       " 'Integ.': 0.00312,\n",
+       " 'Overall': 154.119939,\n",
+       " 'Scatter': 0.013216,\n",
+       " 'Tree': 33.673281}"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['gpuc_4-2_16000_3_100'].med_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Broadcast': 0.6512715,\n",
+       " 'Comm.': 0.652857,\n",
+       " 'Force': 2.273703,\n",
+       " 'Gather': 0.0001935,\n",
+       " 'Integ.': 0.003,\n",
+       " 'Overall': 3.7141015,\n",
+       " 'Scatter': 0.0015300000000000001,\n",
+       " 'Tree': 0.8141195}"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['gpuc_4-2_1000_10_100'].med_times"
    ]
   },
   {
