corrected run time for serial jobs

--- a/analysis/final_plots_ben.ipynb
+++ b/analysis/final_plots_ben.ipynb
@@ -798,56 +798,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Broadcast': 14.065438,\n",
-       " 'Comm.': 14.081706,\n",
-       " 'Force': 105.276457,\n",
-       " 'Gather': 0.00055,\n",
-       " 'Integ.': 0.00312,\n",
-       " 'Overall': 154.119939,\n",
-       " 'Scatter': 0.013216,\n",
-       " 'Tree': 33.673281}"
+       "{'Broadcast': 7.708623,\n",
+       " 'Comm.': 7.717009,\n",
+       " 'Force': 205.458498,\n",
+       " 'Gather': 0.000162,\n",
+       " 'Integ.': 0.002548,\n",
+       " 'Overall': 234.473144,\n",
+       " 'Scatter': 0.008827,\n",
+       " 'Tree': 21.136486}"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results['gpuc_4-2_16000_3_100'].med_times"
+    "results['gpuc_1_16000_3_100'].med_times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Broadcast': 0.6512715,\n",
-       " 'Comm.': 0.652857,\n",
-       " 'Force': 2.273703,\n",
-       " 'Gather': 0.0001935,\n",
-       " 'Integ.': 0.003,\n",
-       " 'Overall': 3.7141015,\n",
-       " 'Scatter': 0.0015300000000000001,\n",
-       " 'Tree': 0.8141195}"
+       "{'Broadcast': 0.5896125000000001,\n",
+       " 'Comm.': 0.4,\n",
+       " 'Force': 7.456358,\n",
+       " 'Gather': 6.65e-05,\n",
+       " 'Integ.': 0.0017,\n",
+       " 'Overall': 8.807002,\n",
+       " 'Scatter': 0.001786,\n",
+       " 'Tree': 0.7591840000000001}"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results['gpuc_4-2_1000_10_100'].med_times"
+    "results['gpuc_1_1000_10_100'].med_times"
    ]
   },
   {
